# variant-graph

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  graph.cpp  graph.h  main.cpp  max_variant.py  node.cpp  node.h  output_equivalent.py
test/: 1109-out.txt  1109-out.txt.old  1109.expected.txt  1109.out.txt  1109.txt  26-out.txt  26-out.txt.old  26.out.txt  26.txt  3515-out.txt  3515-out.txt.old  3515.expected.txt  3515.out.txt  3515.txt
